--- a/.gitattributes
+++ b/.gitattributes
@@ -12,7 +12,7 @@
 # Note: This is only used by command line
 ###############################################################################
 #*.cs     diff=csharp
-*.cshtml
+*.cshtml linguist-detectable=false
 ###############################################################################
 # Set the merge driver for project and solution files
 #
